- Updated Italian translation (Thanks to Diego Pierotto).
- Added ST:TNG theme (Thanks to Fabian Förg).

2008-06-20: Version 1.6.1

- Updated Italian translation (Thanks to Diego Pierotto).
- Fixed a crash if no channel available (Thanks to Winfried Köhler).

2008-10-12: Version 1.6.2

- Converted HISTORY and fi_FI.po to UTF-8.
- Optimized receiver and OSD thread termination.

2008-11-09: Version 1.6.3

- Added initial support for H.264 and HE-AAC.
- Fixed detection of false positives in audio/video streams.
- Refactored source code.

2008-11-30: Version 1.6.4

- Added new helper functions.
- Updated Italian translation (Thanks to Diego Pierotto).
- Fixed a memory leak.
- Added a check for the minimum OSD height.
- Replaced "Use single area (8bpp)" option with VDR's
  "Setup/OSD/Anti-alias".
- Removed the FEMON_NTSC option.
- Fixed a deadlock in cFemonReceiver (Thanks to Antti Seppälä for
  reporting this one).

2008-12-16: Version 1.6.5

- Backported from 1.7.0.

2009-01-06: Version 1.6.6

- Backported from 1.7.1.

2009-06-18: Version 1.6.7

- Backported from 1.7.2.

===================================
VDR Plugin 'femon' Revision History
===================================

2008-12-16: Version 1.7.0

- Updated for vdr-1.7.2.
- Added whitespace cleanups.
- Changed info window to use the channel source instead of the frontend
  type.
- Removed the "Show CA system" setup option.

2009-01-06: Version 1.7.1

- Fixed closing of frontend file handles (Thanks to Brendon Higgins for
  reporting this one).

2009-06-18: Version 1.7.2

- Cleaned up compilation warnings.
- Fixed font handling to be thread-safe.

2009-08-29: Version 1.7.3

- Removed OSD offset and height options.
- Added PES assembler.
- Added bitstream parsers for all codecs.

2009-09-04: Version 1.7.4

- Fixed H.264 bitstream parser.
- Added a mutex to receiver class.
- Added 1080/720/576/480 format symbols into status window.

2009-xx-xx: Version 1.7.5

- Changed H.264 parser to show display aspect ratio.